--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ body {
 :root {
     --main-colorone: #ed6436;
     --main-colortwo: #65c178;
+    --trans-color: #181818;
 }
 
 /* End Variables */
@@ -144,3 +145,129 @@ body {
 }
 
 /* End Working Hours */
+
+/* Start Header */
+
+header {
+    background-color: var(--trans-color , #181818);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header ul {
+    list-style: none;
+    display: flex;
+    margin-left: 35px;
+}
+
+@media (max-width: 991px) {
+    header ul {
+        display: none;
+    }
+}
+
+header ul li a {
+    display: block;
+    padding: 30px 20px;
+    font-size: 18px;
+    text-transform: capitalize;
+    text-decoration: none;
+    color: #F2F2F4;
+}
+
+header ul li a:hover {
+    background-color: var(--main-colorone , #ed6436);
+    color: black;
+}
+
+header ul li a.active {
+    background-color: var(--main-colorone , #ed6436);
+}
+
+header button {
+    margin-right: 35px;
+    padding: 20px;
+    text-transform: capitalize;
+    color: white;
+    background-color: var(--main-colorone , #ed6436);
+    border: none;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+
+header button:hover {
+    background-color: #e84a15;
+}
+
+@media (max-width: 991px) {
+    header button {
+        display: none;
+    }
+}
+
+header h1 {
+    margin-left: 20px;
+    color: var(--main-colorone , #ed6436);
+    cursor: pointer;
+}
+
+@media (min-width: 991px) {
+    header h1 {
+        display: none;
+    }
+}
+
+header h1 span {
+    color: white;
+    font-style: italic;
+}
+
+header .icon {
+    margin-right: 20px;
+    padding: 10px;
+    border: 1px solid #303030;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+header .icon:hover {
+    border-color: white;
+}
+
+
+header .icon span {
+    display: block;
+    background-color: #8c8c8c;
+    height: 2px;
+    width: 25px;
+    margin-bottom: 5px;
+}
+
+@media (min-width: 991px) {
+    header .icon {
+        display: none !important;
+    }
+}
+
+/* End Header */
